force-app/main/default/objects/comp_house__CompanyHouse__c/comp_house__CompanyHouse__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Company House</label>
</CustomObject>