force-app/main/default/objects/comp_house__CompanyHouse__c/fields/comp_house__API_Key__c.field-meta.xml
<CustomField>
    <fullName>comp_house__API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>