force-app/main/default/objects/comp_house__CompanyHouse__c/fields/comp_house__Company_House_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Company_House_API_Endpoint__c</fullName>
    <defaultValue>&quot;https://api.companieshouse.gov.uk&quot;</defaultValue>
    <label>Company House API Endpoint</label>
    <type>Url</type>
</CustomField>