force-app/main/default/objects/comp_house__CompanyHouse__c/fields/comp_house__Company_Search_Items_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Company_Search_Items_Per_Page__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Company Search Items Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>