force-app/main/default/objects/comp_house__CompanyHouse__c/fields/comp_house__Filing_HIstory_Items_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Filing_HIstory_Items_Per_Page__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Filing HIstory Items Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>